@@ -857,7 +857,6 @@ session "HOL-SPARK" in "SPARK" = "HOL-Word" +
     SPARK
 
 session "HOL-SPARK-Examples" in "SPARK/Examples" = "HOL-SPARK" +
-  options [spark_prv = false]
   theories
     "Gcd/Greatest_Common_Divisor"
     "Liseq/Longest_Increasing_Subsequence"
@@ -873,7 +872,7 @@ session "HOL-SPARK-Examples" in "SPARK/Examples" = "HOL-SPARK" +
     "Sqrt/Sqrt"
 
 session "HOL-SPARK-Manual" in "SPARK/Manual" = "HOL-SPARK" +
-  options [show_question_marks = false, spark_prv = false]
+  options [show_question_marks = false]
   sessions
     "HOL-SPARK-Examples"
   theories
